<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019. Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  --><resources>
  <!-- TODO: Add translation for ALL strings marked as translatable=false in this file -->
  <string name="santaDashboard" translation_description="A grouping of Santa's status on a dashboard">Santa\'s Dashboard</string>
  <string name="current_location" translation_description="Where is Santa now. Label in all capital letters.">CURRENT LOCATION</string>
  <string name="presents_delivered" translation_description="How many presents has Santa delivered. Label in all capital letters.">GIFTS DELIVERED</string>
  <string name="santa_status" translation_description="What's Santa saying. Label in all capital letters.">SANTA STATUS</string>
  <string name="arriving_in" translation_description="How much longer until Santa arrives at the next stop.Label in all capital letters.">ARRIVING IN</string>
  <string name="departing_in" translation_description="How much longer until Santa departs current location. Label in all capital letters.">DEPARTING IN</string>
  <string name="localtime" translation_description="Santa has arrived at a particular destination. Label in all capital letters.">ARRIVED AT</string>
  <string name="population" translation_description="The population of a location that Santa is visiting. Label in all capital letters.">POPULATION</string>
  <string name="next_destination" translation_description="What is Santa's next stop. Label in all capital letters.">NEXT DESTINATION</string>
  <string name="arriving_at" translation_description="Which destination is Santa arriving at. Label in all capital letters.">ARRIVING AT</string>
  <string name="arrived_at" translation_description="Which destination did Santa arrive at. Label in all capital letters.">ARRIVED AT</string>
  <string name="in_transit" translation_description="Santa is traveling to the next stop.">In transit</string>
  <string name="follow_santa" translation_description="A button that enables Santa Cam - an automated stylised camera that tracks Santa">Follow Santa</string>
  <string name="lost_contact_with_santa" translation_description="Having trouble communicating with Santa (networking issue)">Lost contact with Santa</string>
  <string name="notification_nearby" translation_description="Santa is close to your location">Santa is nearby!</string>
  <string name="notification_takeoff" translation_description="Santa's journey has begun, he is now delivering presents">Santa has taken off!</string>
  <string name="notification_unlock_video" translation_description="A new video has been unlocked in the app leading up to Chrstimas">A new video is available!</string>
  <string name="notification_unlock_game" translation_description="A new game has been unlocked in the app leading up to Chrstimas">A new game is available!</string>
  <string name="santa_arrives_in_your_area_in" translation_description="Heading. Followed by a time until he arrives users location.">SANTA ARRIVES IN YOUR AREA IN</string>
  <string name="santa_is_approximately" translation_description="Followed by a distance between Santa and user location. ">SANTA IS APPROXIMATELY</string>
  <string name="distance_km_away" translation_description="Distance between Santa and the user current location. Kilometer in short. The first argument is a number. The second may be a number in miles depending on locale.">%1$,d km%2$s away</string>
  <string name="distance_optional_miles" translation_description="Distance converted as miles. May not be shown in some locales.">\u0020(%,d mi)</string>
  <string name="distance_mi_away" translation_description="Distance between Santa and the user current location. Mile in short.">%1$,d mi away</string>
  <string name="did_you_know" translation_description="Heading for trivia facts.">DID YOU KNOW</string>
  <string name="watch_movie" translation_description="Title for videos">WATCH MOVIE</string>
  <string name="santa_update" translation_description="Heading for Status messages from Santa">SANTA UPDATE</string>
  <string name="elapsed_time" translation_description="Heading for elapsed time">ELAPSED TIME</string>
  <string name="wikipedia" translation_description="Label for button to show a wikipedia page.">Wikipedia</string>
  <string name="arrival" translation_description="Label for the time Santa arriving at a city">ARRIVAL</string>
  <string name="weather" translation_description="Label for the weather (temperature) of a city">WEATHER</string>
  <string name="weather_format" translation_description="Temperature expression, like 23 C / 73 F">%1$s&#xb0;C / %2$s&#xb0;F</string>
  <string name="did_you_know_attribution" translation_description="Attribution of 'Did you know' facts to the 'National Geographic Bee'">World facts provided by National Geographic Bee</string>
  <string name="photo" translation_description="Label for button to show a photo of a place.">Photo</string>
  <string name="photos" translation_description="Label for button to show photos (plural) of a place.">Photos</string>
  <string name="street_view" translation_description="Label for button to show Street View">STREET VIEW</string>
  <string name="back_to_santa_cam" translation_description="Label for button to go back to the Santa cam mode.">BACK TO SANTA CAM</string>
  <string name="update_from_santa" translation_description="Content description for icon that indicates that the information is an update from Santa about his locations and such">Update from Santa</string>
  <string name="trivia_from_santa" translation_description="Content description for icon that indicates that the information is a trivia.">Trivia from Santa</string>
  <string name="photo_from_santa" translation_description="Content description for icon that indicates that the information is about a photo">Photo from Santa</string>
  <string name="video_from_santa" translation_description="Content description for icon that indicates that the information is about a video">Video from Santa</string>
  <string name="show_history" translation_description="Label for button to show card history.">Show history</string>
  <string name="see_best_moments" translation_description="Label for card to show history.">See all the best moments of Santa\'s trip</string>
  <string name="return_to_map" translation_description="Label for button to go back to tracker from full screen streetview/video/photo">Return to map</string>
  <string name="santa_is_now_arriving_in_x" translation_description="Label for the next place Santa is visiting">Santa is now arriving in %s</string>
  <string name="santa_has_handed_out_x_presents" translation_description="Label for the number of presents Santa has delivered so far">Santa has handed out %s presents</string>
  <string name="new_update_from_santa" translation_description="Label for icon that indicates an update from Santa">New update from Santa</string>
  <string name="new_trivia_from_santa" translation_description="Label for icon that indicates a trivia from Santa">New trivia from Santa</string>
  <string name="new_video_from_santa" translation_description="Label for icon that indicates a video from Santa">New video from Santa</string>
  <string name="new_photo_from_santa" translation_description="Label for icon that indicates a photo from Santa">New photo from Santa</string>
  <string name="cast_overlay_text" translation_description="Displayed on overlay screen pointing to the Cast button explaining that this button enables Chromecast-functionality.">Follow Santa on the big screen!\nTap this button to view Santa\'s journey on your TV with Chromecast.</string>
  <string name="menu_media_router_title" translation_description="Cast menu item. Item in the menu that contains an icon that enables and disables Chromecast-functionality">Cast button</string>
</resources>
