<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/card"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:focusable="true">

    <ImageView
        android:id="@+id/destination_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_media_height"
        android:contentDescription="@string/photo"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/destination_copyright"
            style="@style/DestinationCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            tools:text="Photo by nanashi"/>

        <TextView
            android:id="@+id/destination_region"
            style="@style/DashboardLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/santacamDashboardPadding"
            android:layout_marginRight="@dimen/santacamDashboardPadding"
            android:focusable="true"
            tools:text="KANAGAWA"/>

        <TextView
            android:id="@+id/destination_city"
            style="@style/DashboardTextFeatured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/santacamDashboardPadding"
            android:layout_marginRight="@dimen/santacamDashboardPadding"
            android:focusable="true"
            android:textStyle="bold"
            tools:text="Machida"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/santacamDashboardPadding"
            android:layout_marginRight="@dimen/santacamDashboardPadding"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/destination_arrival_label"
                style="@style/DashboardLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:text="@string/arrival"/>

            <TextView
                android:id="@+id/destination_weather_label"
                style="@style/DashboardLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:focusable="true"
                android:text="@string/weather"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/santacamDashboardPadding"
            android:layout_marginRight="@dimen/santacamDashboardPadding"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/destination_arrival"
                style="@style/DashboardTextFeatured"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_arrival"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_arrival"
                android:focusable="true"/>

            <TextView
                android:id="@+id/destination_weather"
                style="@style/DashboardTextFeatured"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawableLeft="@drawable/ic_weather"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_weather"
                android:focusable="true"/>

        </LinearLayout>

        <Button
            android:id="@+id/destination_street_view"
            style="@style/DestinationCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/street_view"
            android:visibility="visible"/>

    </LinearLayout>

</FrameLayout>
