<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/santaDashboard"
    android:focusable="true"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/dash_presents_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/santacamDashboardPadding">

            <TextView
                android:id="@+id/dash_presents_label"
                style="@style/DashboardLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/presents_delivered" />

            <TextSwitcher
                android:id="@+id/dash_presents"
                style="@style/DashboardViewSwitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:measureAllChildren="false">

                <TextView
                    style="@style/DashboardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="122,332,342" />

                <TextView
                    style="@style/DashboardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TextSwitcher>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dash_countdown_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/santacamDashboardPadding"
            android:visibility="invisible">

            <TextView
                android:id="@+id/dash_countdown_label"
                style="@style/DashboardLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                tools:text="@string/arriving_in" />

            <TextSwitcher
                android:id="@+id/dash_countdown"
                style="@style/DashboardViewSwitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:measureAllChildren="false">

                <TextView
                    style="@style/DashboardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="12:34"/>

                <TextView
                    style="@style/DashboardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TextSwitcher>

        </LinearLayout>

    </FrameLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/trackerPrimaryDark" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/santacamDashboardPadding">

        <TextView
            android:id="@+id/dash_location_label"
            style="@style/DashboardLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            tools:text="@string/next_destination" />

        <TextSwitcher
            android:id="@+id/dash_location"
            style="@style/DashboardViewSwitcher.Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureAllChildren="false"
            android:focusable="true">

            <TextView
                style="@style/DashboardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Owari Fuji, Japan" />

            <TextView
                style="@style/DashboardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TextSwitcher>

    </LinearLayout>

</LinearLayout>
