<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019. Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="true">

    <ImageView
        android:id="@+id/destination_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_media_height"
        android:contentDescription="@string/photo"
        android:scaleType="centerCrop"
        tools:background="#060"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/destination_copyright"
            style="@style/Widget.Tracker.Card.Copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="Photo by nanashi"/>

        <TextView
            android:id="@+id/destination_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:focusable="true"
            android:textAppearance="@style/TextAppearance.Tracker.Card.Label"
            tools:text="KANAGAWA"/>

        <TextView
            android:id="@+id/destination_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:focusable="true"
            android:textAppearance="@style/TextAppearance.Tracker.Card.Text"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Machida"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/destination_arrival_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:text="@string/arrival"
                android:textAppearance="@style/TextAppearance.Tracker.Card.Label"/>

            <TextView
                android:id="@+id/destination_weather_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:focusable="true"
                android:text="@string/weather"
                android:textAppearance="@style/TextAppearance.Tracker.Card.Label"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/destination_arrival"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:focusable="true"
                android:textAppearance="@style/TextAppearance.Tracker.Card.Text"
                tools:drawableStart="@drawable/ic_arrival"
                tools:text="12:34"/>

            <TextView
                android:id="@+id/destination_weather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawablePadding="4dp"
                android:focusable="true"
                android:textAppearance="@style/TextAppearance.Tracker.Card.Text"
                tools:drawableStart="@drawable/ic_weather"
                tools:text="19 C / 67 F"/>

        </LinearLayout>

        <Button
            android:id="@+id/destination_street_view"
            style="@style/Widget.Tracker.Card.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/street_view"/>

    </LinearLayout>

</FrameLayout>
